<resources>
    <string name="app_name">UrNote</string>
    <string name="kembali">Kembali</string>
    <string name="app_logo">Logo Aplikasi</string>
    <string name="simpan">Simpan</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="icon_save">Icon Simpan</string>
    <string name="icon_edit">Icon Edit</string>
    <string name="icon_delete">Icon Hapus</string>

</resources>